# fullstack-rust

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  index.html  styles.css
client/src/: form.rs  main.rs  products.rs  router.rs
server/: .env  Cargo.toml  rest-api.http
server/db/migrations/: 1_init.sql
server/src/: handlers.rs  main.rs
