[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.189"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.21.0", features = ["csr"] }
