[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.4.0"
serde = "1.0.189"
serde_json = "1.0.107"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
