[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
json = "0.12.4"
postgres = "0.19.7"
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "migrate", "json", "macros", "time", "uuid", "bigdecimal"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenv = "0.15.0"
serde = "1.0.189"
serde_json = "1.0.107"
